--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>MyFolio - Portfolio HTML Template</title>
+        <title>My Portfolio - Portfolio HTML Template</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Portfolio HTML Template" name="keywords">
         <meta content="Portfolio HTML Template" name="description">
@@ -539,3 +539,4 @@
         <script src="js/main.js"></script>
     </body>
 </html>
+
