--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="container text-center">
                 <div class="row">
                     <div class="col-md-12">
-                        <img src="img/profile-pic.jpg" alt="Md Ifthakhar Hossan" />
+                        <img src="img/Cover.jpg" alt="Md Ifthakhar Hossan" />
                     </div>
 
                     <div class="col-md-12">
@@ -77,7 +77,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-6 col-lg-4">
-                        <img class="img-fluid" src="img/about-us.jpg" />
+                        <img class="img-fluid" src="img/ifthakhar.jpg" />
                     </div>
 
                     <div class="col-md-6 col-lg-8">
@@ -304,3 +304,4 @@ to achieve organizational objectives through innovation and precision.
                         </div>
                     </div>
                     
+
