--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-6 col-lg-4">
-                        <img class="img-fluid" src="img/ifthakhar.jpg" />
+                        <img class="img-fluid" src="img/ifthakhar.JPG" />
                     </div>
 
                     <div class="col-md-6 col-lg-8">
@@ -304,4 +304,5 @@ to achieve organizational objectives through innovation and precision.
                         </div>
                     </div>
                     
+
 
