--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </div>
 
                     <div class="col-md-12">
-                        <p>Electrical & Electronic Engineer</p>
+                        <p>Electrical & Electronic Engineer, Electrical System Designer, Automation Engineer</p>
                         <h2></h2>
                     </div>
                 </div>
@@ -304,6 +304,7 @@ to achieve organizational objectives through innovation and precision.
                         </div>
                     </div>
                     
+
 
 
 
