--- a/index.html
+++ b/index.html
@@ -24,26 +24,27 @@
     </head>
 
     <body>
-        <!-- Header Start -->
-        <div class="top-header" id="top-header">
-            <div class="container text-center">
-                <div class="row">
-                    <div class="col-md-12">
-                        <img src="img/Cover.jpg" alt="Md Ifthakhar Hossan" />
-                    </div>
+       <!-- Header Start -->
+<div class="top-header" id="top-header">
+    <div class="container text-center">
+        <div class="row">
+            <div class="col-md-12">
+                <img src="img/Cover.jpg" alt="Md Ifthakhar Hossan" />
+            </div>
 
-                    <div class="col-md-12">
-                        <h1>I'm Md Ifthakhar Hossan</h1>
-                    </div>
+            <div class="col-md-12">
+                <h1>I'm Md Ifthakhar Hossan</h1>
+            </div>
 
-                    <div class="col-md-12">
-                        <p>Electrical & Electronic Engineer, Electrical System Designer, Automation Engineer</p>
-                        <h2></h2>
-                    </div>
-                </div>
+            <div class="col-md-12">
+                <p style="display:none;">Electrical & Electronic Engineer, Electrical System Designer, Automation Engineer</p>
+                <h2></h2>
             </div>
         </div>
-        <!-- Header End -->
+    </div>
+</div>
+<!-- Header End -->
+
 
         <!-- Nav Start -->
         <div class="header">
@@ -304,6 +305,7 @@ to achieve organizational objectives through innovation and precision.
                         </div>
                     </div>
                     
+
 
 
 
