--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
 
             <div class="col-md-12">
-                <p style="display:none;">Electrical & Electronic Engineer, Electrical System Designer, Automation Engineer</p>
+                <p>Electrical & Electronic Engineer, Electrical System Designer, Automation Engineer</p>
                 <h2></h2>
             </div>
         </div>
@@ -305,6 +305,7 @@ to achieve organizational objectives through innovation and precision.
                         </div>
                     </div>
                     
+
 
 
 
